--- a/prepros-6.config
+++ b/prepros-6.config
@@ -17,7 +17,14 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "assets/scss/master.scss",
+      "imports": [
+        "assets/scss/custom.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
@@ -64,7 +71,7 @@
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
-      "enable": false,
+      "enable": true,
       "url": "http://coin-exchange.vagrant"
     }
   },
